--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -15,7 +15,12 @@
         <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
           <div id="newui-topbar" class="navbar-inner">
             <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"><span class="navbar-titel">Cockpit</span></a>
-            <div id="menu"></div>
+            <div id="menu">
+              <rov-menu id="menuitems" class="nav pull-right">
+                <li><a href="/#" id="show-settings" onclick="document.querySelector('html /deep/ rov-settings').open();">Settings</a></li>
+                <li><a href="/#" id="show-diagnostic" onclick="document.querySelector('html /deep/ rov-diagnostics').open();" >Diagnostic</a></li>
+              </rov-menu>
+            </div>
           </div>
         </div>
       </div>
@@ -70,6 +75,19 @@
           </div>
         </div>
       </div>
+      <rov-settings id="plugin-settings">
+      </rov-settings>
+
+      <rov-diagnostics id="diagnostic">
+        <div class="settings-block">
+          <h4>Pre-Flight Check</h4>
+        </div>
+        <div class="settings-block">
+          <h4>Callibration</h4>
+          <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
+          <a href="#" class="btn" id="zero_depth">Zero Depth</a>
+        </div>
+      </rov-diagnostics>
     </div>
   </template>
   <script>
