--- a/src/ui-plugins/new-ui/public/power.html
+++ b/src/ui-plugins/new-ui/public/power.html
@@ -101,7 +101,7 @@
             self.setVoltage(self.voltage);
           };
           window.cockpit.emit('capestatus.request.battery.config', setBatteryConfig);
-          window.cockpit.emit('capestatus.battery.config', setBatteryConfig)
+          window.cockpit.on('capestatus.battery.config', setBatteryConfig)
         },
         setLeftBattery: function(current) {
           this.setCurrent($(this.$.left), this.leftIndicator, current);
