--- a/src/static/webcomponents/diagnostics/diagnostics.html
+++ b/src/static/webcomponents/diagnostics/diagnostics.html
@@ -10,6 +10,7 @@
     (function() {
       Polymer({
         header: 'Diagnostics',
+        id: 'diagnostics-settings',
         open: function() {
           window.cockpit.sendUpdateEnabled = false;
           this.super();
