--- a/src/static/webcomponents/settings/settings.html
+++ b/src/static/webcomponents/settings/settings.html
@@ -10,9 +10,11 @@
     (function() {
       Polymer({
         header: 'Settings',
+        childId: 'settings-container',
         open: function() {
           window.cockpit.sendUpdateEnabled = false;
           this.super();
+          $('html /deep/ #capestatus-settings').collapse('show');
         },
         hide: function () {
           window.cockpit.sendUpdateEnabled = true;
