--- a/src/plugins/capestatus/public/settings.html
+++ b/src/plugins/capestatus/public/settings.html
@@ -1,7 +1,8 @@
+
 <div id="capeStatus-settings">
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#plugin-settings" href="#collapseCapestatus">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#capestatus-settings" href="#collapseCapestatus">
         Battery configuration
       </a>
     </div>
