--- a/src/ui-plugins/standard/public/connection-health.html
+++ b/src/ui-plugins/standard/public/connection-health.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<polymer-element name="connection-health" attributes="" extends="drop-in-dialog">
+<polymer-element name="connection-health" attributes="">
   <template>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
