--- a/src/system-plugins/software-update-alert/public/settings.html
+++ b/src/system-plugins/software-update-alert/public/settings.html
@@ -20,7 +20,7 @@
                     <span data-bind="text: name, click: $root.changed"></span>
                   </label>
                 </div>
-                <span data-bind="fadeVisible: { value: $data.isSaved, fadeIn: false} "><i class="icon-ok" title="Saved!"></i> Saved!</span>
+                <span data-bind="fadeVisible: { value: $data.isSaved, fadeOut: false, fadeIn: false} "><i class="icon-ok" title="Saved!"></i> Saved!</span>
               </div>
             </div>
         </div>
