--- a/src/static/webcomponents/video/video.html
+++ b/src/static/webcomponents/video/video.html
@@ -47,6 +47,7 @@
       <img class="hidden" id="video" src="../../themes/OpenROV/img/no_camera.jpg"/>
       <img class="hidden center" id="noVideo" src="../../themes/OpenROV/img/no_camera.jpg"/>
       <canvas id='videoCanvas'></canvas>
+      <content></content>
     </div>
 
   </template>
