--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../../webcomponents/settings/settings.html">
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
 <link rel="import" href="../../webcomponents/menu/menu.html">
+<link rel="import" href="../../webcomponents/video-compass.html">
 <link rel="import" href="capestatus-footer.html">
 <link rel="import" href="connection-health.html">
 <link rel="import" href="servo-tilt.html">
@@ -36,8 +37,11 @@
       <div class="row-fluid full-height">
         <div class="span9 border full-height" id="outter-videocontainer">
           <div id="video-container" class="full-height center pagination-centered" border='1'>
-            <rov-video></rov-video>
+            <rov-video>
+              <video-compass></video-compass>
+            </rov-video>
             <rov-horizon id="horizon"></rov-horizon>
+
           </div>
         </div>
         <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
