--- a/src/static/webcomponents/video-compass.html
+++ b/src/static/webcomponents/video-compass.html
@@ -7,6 +7,7 @@
         width: 100%;
         height: 30px;
         bottom: 0;
+        margin-top: -20px;
       }
       #compass {
         position: absolute;
@@ -23,7 +24,7 @@
     </style>
     <div id="container">
       <div id="compass" class="hud">
-        <canvas id="compassCanvas" class="hud" style="position: absolute"></canvas>
+        <canvas id="compassCanvas"></canvas>
         <canvas id="needle"></canvas>
       </div>
     </div>
@@ -54,21 +55,13 @@
 
           // Setup compass canvas
           var divRect = div.getBoundingClientRect(), ctx, x, i, needle;
-//          div.style.position = 'absolute';
-          // div.style.bottom = '0px';
-//          div.style.backgroundImage = '-webkit-radial-gradient(50% 50%, circle cover, rgb(68, 68, 68) 0%, black 100%)';
           this.visibleWidth = divRect.width * (720 / 120);
-          // divRect.width;
           this.canvas = this.$.compassCanvas; //document.createElement('canvas');
           this.canvas.width = this.visibleWidth * 2;
-          this.canvas.height = divRect.height;
-//          this.canvas.style.position = 'absolute';
-//          this.canvas.className = 'hud';
-//          div.style.overflow = 'hidden';
+          this.canvas.height = divRect.height + 30;
           ctx = this.canvas.getContext('2d');
           x = 0;
           ctx.textAlign = 'center';
-//          div.appendChild(this.canvas);
 
           for (i = 0; i < 360 * 2; i += 1) {
             ctx.beginPath();
@@ -95,8 +88,7 @@
             ctx.stroke();
             x += this.visibleWidth / 720;
           }
-          needle = this.$.needle; //document.createElement('canvas');
-//          needle.id = "needle";
+          needle = this.$.needle;
           needle.width = 15;
           needle.height = 15;
           needle.style.top = 0;
@@ -109,7 +101,6 @@
           ctx.lineTo(needle.width, 0);
           ctx.lineTo(0, 0);
           ctx.fill();
-//          div.appendChild(needle);
           this.moveTo(0);
 
           // Bind on window events to resize
