--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
 <link rel="import" href="../../webcomponents/menu/menu.html">
 <link rel="import" href="../../webcomponents/video-compass.html">
+<link rel="import" href="../../webcomponents/ping.html">
 <link rel="import" href="capestatus-footer.html">
 <link rel="import" href="connection-health.html">
 <link rel="import" href="servo-tilt.html">
@@ -54,6 +55,7 @@
       <div class="navbar-inner">
         <div id="footercontent" class="container-fluid" style="height: 100%">
           <connection-health class="pull-left"></connection-health>
+          <bb-ping class="pull-left"></bb-ping>
           <capestatus-footer class="pull-right"></capestatus-footer>
         </div>
       </div>
