--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -6,10 +6,10 @@
 <link rel="import" href="../../webcomponents/menu/menu.html">
 <link rel="import" href="../../webcomponents/video-compass.html">
 <link rel="import" href="../../webcomponents/ping.html">
-<link rel="import" href="capestatus-footer.html">
-<link rel="import" href="connection-health.html">
-<link rel="import" href="servo-tilt.html">
-<link rel="import" href="brightness-indicator.html">
+<link rel="import" href="./webcomponents/capestatus-footer.html">
+<link rel="import" href="./webcomponents/connection-health.html">
+<link rel="import" href="./webcomponents/servo-tilt.html">
+<link rel="import" href="./webcomponents/brightness-indicator.html">
 
 <polymer-element name="rov-ui-standard">
   <template>
