--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../../webcomponents/settings/settings.html">
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
 <link rel="import" href="../../webcomponents/menu/menu.html">
+<link rel="import" href="../../webcomponents/topdowncompass/topdowncompass.html">
 <link rel="import" href="../../webcomponents/video-compass.html">
 <link rel="import" href="../../webcomponents/ping.html">
 <link rel="import" href="./webcomponents/capestatus-footer.html">
@@ -55,6 +56,7 @@
       <div class="navbar-inner">
         <div id="footercontent" class="container-fluid" style="height: 100%">
           <connection-health class="pull-left"></connection-health>
+          <rov-topdowncompass class="pull-left"></rov-topdowncompass>
           <bb-ping class="pull-left"></bb-ping>
           <capestatus-footer class="pull-right"></capestatus-footer>
         </div>
