--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -4,6 +4,11 @@
 <link rel="import" href="/ui-plugin/new-ui/depth.html" />
 <link rel="import" href="/ui-plugin/new-ui/switches.html" />
 <link rel="import" href="/ui-plugin/new-ui/power.html" />
+<link rel="import" href="../../webcomponents/settings/settings.html">
+<link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
+<link rel="import" href="../../webcomponents/video/video.html">
+<link rel="import" href="../../webcomponents/horizon/horizon.html">
+
 
 <polymer-element name="x-newui">
   <template>
