--- a/src/ui-plugins/standard/public/webcomponents/lasers.html
+++ b/src/ui-plugins/standard/public/webcomponents/lasers.html
@@ -10,17 +10,14 @@
         top: 5px;
         height: 20px;
         line-height: 20px;
-        padding: 5px;
-        padding-right: 2px;
-        padding-left: 2px;
+        padding: 10px 2px;
         background-color: transparent;
       }
 
       #laser {
         color: white;
         border: 1px solid #cd0a0a;
-        padding-left: 2px;
-        padding-right: 2px;
+        display: list-item;
       }
 
       #laser.enabled {
