--- a/src/ui-plugins/new-ui/public/switches.html
+++ b/src/ui-plugins/new-ui/public/switches.html
@@ -60,7 +60,7 @@
         lastPing: new Date(),
         switches: {
           COM: {switchable: false, state: false, message: { enabled: 'capestatus.connection.connected', disabled: 'capestatus.connection.disconnected'} },
-          GPD: {switchable: false, state: false, message: { enabled: 'gamepad.connected', disabled: 'gamepad.disconnected'} },
+          GPD: {switchable: false, state: false, message: { enabled: 'plugin.input.gamepad.connected', disabled: 'plugin.input.gamepad.disconnected'} },
           TNK: {switchable: false, state: false, message: 'tankControl'},
           DLK: {switchable: false, state: false, message: 'rovpilot.depthHold'},
           HLK: {switchable: false, state: false, message: 'rovpilot.headingHold'},
