--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -12,6 +12,7 @@
 <link rel="import" href="./webcomponents/servo-tilt.html">
 <link rel="import" href="./webcomponents/brightness-indicator.html">
 <link rel="import" href="./webcomponents/lasers.html">
+<link rel="import" href="./webcomponents/gamepad.html">
 
 <polymer-element name="rov-ui-standard">
   <template>
@@ -23,9 +24,10 @@
         <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
         <ul class="nav" id="navtoolbar">
           <li><a href="/#"><img id="keyboardpopover" src="../../themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
-          <li><a href="/#" id="servoTilt"><servo-tilt></servo-tilt></a></li>
-          <li><brightness-indicator></brightness-indicator></li>
-          <li><rov-lasers></rov-lasers></li>
+          <li><a href="/#" id="servoTilt"><servo-tilt class="pull-left"></servo-tilt></a></li>
+          <li><brightness-indicator  class="pull-left"></brightness-indicator></li>
+          <li><rov-gamepad class="pull-left"></rov-gamepad></li>
+          <li><rov-lasers class="pull-left"></rov-lasers></li>
         </ul>
 
         <rov-menu id="menuitems" class="nav pull-right">
