--- a/src/ui-plugins/standard/public/webcomponents/brightness-indicator.html
+++ b/src/ui-plugins/standard/public/webcomponents/brightness-indicator.html
@@ -18,7 +18,7 @@
         domReady: function() {
           var self = this;
 
-          window.cockpit.on('capestatus.lights', function(level) {
+          window.cockpit.on('plugin.lights.level', function(level) {
             self.brightnessLevel = level;
           });
         }
