Rename laer message names

--- a/src/ui-plugins/new-ui/public/switches.html
+++ b/src/ui-plugins/new-ui/public/switches.html
@@ -64,7 +64,7 @@
           TNK: {switchable: false, state: false, message: 'tankControl'},
           DLK: {switchable: false, state: false, message: 'rovpilot.depthHold'},
           HLK: {switchable: false, state: false, message: 'rovpilot.headingHold'},
-          LSR: {switchable: false, state: false, message: 'plugin.laser.laser' },
+          LSR: {switchable: false, state: false, message: 'plugin.laser' },
           LED: {switchable: false, state: false},
           ESC: {switchable: false, state: true, message: 'rovpilot.esc' }
         },
