--- a/src/ui-plugins/standard/public/webcomponents/lasers.html
+++ b/src/ui-plugins/standard/public/webcomponents/lasers.html
@@ -48,15 +48,15 @@
         domReady: function() {
           var self = this;
 
-          window.cockpit.on('plugin.laser.laser.enabled', function() {
+          window.cockpit.on('plugin.laser.enabled', function() {
             self.lasersEnabled = true;
           });
-          window.cockpit.on('plugin.laser.laser.disabled', function() {
+          window.cockpit.on('plugin.laser.disabled', function() {
             self.lasersEnabled = false;
           });
         },
         toggle: function() {
-          window.cockpit.emit('plugin.laser.laser.toggle');
+          window.cockpit.emit('plugin.laser.toggle');
         }
       })
     })();
