--- a/src/ui-plugins/standard/public/webcomponents/thrustfactor.html
+++ b/src/ui-plugins/standard/public/webcomponents/thrustfactor.html
@@ -15,7 +15,7 @@
 
     <div class="span1 pull-left">
       <h6>Thrust&nbsp;Factor</h6>
-      <div class="label badge">{{ thrustFactor }}</div>
+      <div class="label badge">{{ powerLevel }}</div>
     </div>
 
   </template>
