--- a/src/plugins/arduinofirmwareupload/public/settings.html
+++ b/src/plugins/arduinofirmwareupload/public/settings.html
@@ -17,7 +17,7 @@
                     <button type="button" class="close" data-dismiss="alert">x</button>
                     <strong>Oh snap!</strong> Your browser doesn't support the file upload API!
                 </div>
-                <button href="#firmware-upload-dialog" class="btn btn-small" type="button" id="arduinoFirmware-upload" data-bind="css: { 'btn-success': isValidFirmwareFile() == false,  'btn-success': isValidFirmwareFile() }" data-toggle="modal">
+                <button href="/#" class="btn btn-small" type="button" id="arduinoFirmware-upload" data-bind="css: { 'btn-success': isValidFirmwareFile() == false,  'btn-success': isValidFirmwareFile() }">
                     <i class="icon-upload icon-white"></i>Upload firmware from SD card to Arduino
                 </button>
             </div>
