--- a/src/static/webcomponents/drop-in-dialog/drop-in-dialog.html
+++ b/src/static/webcomponents/drop-in-dialog/drop-in-dialog.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<polymer-element name="drop-in-dialog" attributes="header">
+<polymer-element name="drop-in-dialog" attributes="header, childId">
   <template>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
