--- a/src/static/webcomponents/diagnostics/diagnostics.html
+++ b/src/static/webcomponents/diagnostics/diagnostics.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
 
+    <style>
+      #calibrations > a{
+        float: left;
+      }
+    </style>
+
     <drop-in-dialog id="dropIn" childId="{{ childId }}" header="{{ header }}">
-      <div class="settings-block">
-        <h4>Pre-Flight Check</h4>
-      </div>
       <div class="settings-block">
         <h4>Calibration</h4>
         <div id="calibrations">
-          <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
-          <a href="#" class="btn" id="zero_depth">Zero Depth</a>
         </div>
       </div>
       <content></content>
