--- a/src/plugins/photocapture/public/photospanel.html
+++ b/src/plugins/photocapture/public/photospanel.html
@@ -1,6 +1,6 @@
 <!-- photos -->
 <drop-in-dialog id="photos-dropIn" childId="photos-content" header="Photos">
-   <div class="settings-block" style="position: relative; overflow: auto; height: 100%">
+   <div class="settings-block" style="position: relative;  height: 100%">
       <ul class="thumbnails" data-bind="foreach: snapshots">
          <li class="">
             <a target="_blank" data-bind="attr: { href: $data}" class="thumbnail">
