--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../../webcomponents/topdowncompass/topdowncompass.html">
 <link rel="import" href="../../webcomponents/video-compass.html">
 <link rel="import" href="../../webcomponents/ping.html">
+<link rel="import" href="../../webcomponents/serial-monitor.html">
 <link rel="import" href="./webcomponents/capestatus-footer.html">
 <link rel="import" href="./webcomponents/connection-health.html">
 <link rel="import" href="./webcomponents/servo-tilt.html">
