--- a/src/static/webcomponents/telemetry.html
+++ b/src/static/webcomponents/telemetry.html
@@ -4,6 +4,12 @@
   <template>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <style>
+      .well {
+        background-color: black;
+        color: white;
+      }
+    </style>
 
     <div class="controller well well-small">
       <ul>
