--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -57,7 +57,7 @@
         </div>
         <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
           <div id="buttonPanel" class="controller well well-small"></div>
-          <telemetry-monitor id="telemetry" class="controller well well-small" ></telemetry-monitor>
+          <telemetry-monitor id="telemetry" class="" ></telemetry-monitor>
         </div>
       </div>
     </div>
