Fixig serial status

--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -57,6 +57,7 @@
         </div>
         <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
           <div id="buttonPanel" class="controller well well-small"></div>
+          <serial-monitor class="hidden" style=""></serial-monitor>
           <telemetry-monitor id="telemetry" class="" ></telemetry-monitor>
         </div>
       </div>
